--- a/demo07/.classpath
+++ b/demo07/.classpath
@@ -7,6 +7,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="libs/EventList.jar"/>
+	<classpathentry kind="lib" path="libs/JASmineUpdates.jar"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
