--- a/demo07/pom.xml
+++ b/demo07/pom.xml
@@ -16,44 +16,31 @@
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
-        <configuration>
-          <source/>
-          <target/>
-        </configuration>
+          <version>3.2</version>
+		        <configuration> <!-- Compile java 7 compatible bytecode -->
+		          <source>1.8</source>
+		          <target>1.8</target>
+		        </configuration>
       </plugin>
     </plugins>
   </build>
   <dependencies>
-    <dependency>
-      <groupId>it.zero11</groupId>
-      <artifactId>microsim-core</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>it.zero11</groupId>
-      <artifactId>microsim-gui</artifactId>
-    </dependency>    
-  </dependencies>
-  
-  <repositories>
-    <repository>
-      <id>microsim</id>
-      <name>Microsim</name>
-      <url>http://jaslibrary.sourceforge.net/maven</url>
-    </repository>
-  </repositories>  
-  <dependencyManagement>
-  	<dependencies>
-  		<dependency>
-  			<groupId>it.zero11</groupId>
-  			<artifactId>microsim-core</artifactId>
-  			<version>2.1.2</version>
-  		</dependency>
-  		<dependency>
-  			<groupId>it.zero11</groupId>
-  			<artifactId>microsim-gui</artifactId>
-  			<version>2.1.2</version>
-  		</dependency>
-  	</dependencies>
-  </dependencyManagement>
+	<dependency>
+	    <groupId>com.github.jasmineRepo</groupId>
+	    <artifactId>JAS-mine-core</artifactId>
+	    <version>3.0.1</version>
+	</dependency>
+	<dependency>
+	    <groupId>com.github.jasmineRepo</groupId>
+	    <artifactId>JAS-mine-gui</artifactId>
+	    <version>3.0.1</version>
+	</dependency>
+	</dependencies>
+	
+	<repositories>
+		<repository>
+		    <id>jitpack.io</id>
+		    <url>https://jitpack.io</url>
+		</repository>
+	</repositories>
 </project>
