--- a/demo07/pom.xml
+++ b/demo07/pom.xml
@@ -28,12 +28,10 @@
 	<dependency>
 	    <groupId>com.github.jasmineRepo</groupId>
 	    <artifactId>JAS-mine-core</artifactId>
-	    <version>3.0.1</version>
 	</dependency>
 	<dependency>
 	    <groupId>com.github.jasmineRepo</groupId>
 	    <artifactId>JAS-mine-gui</artifactId>
-	    <version>3.0.1</version>
 	</dependency>
 	</dependencies>
 	
@@ -43,4 +41,18 @@
 		    <url>https://jitpack.io</url>
 		</repository>
 	</repositories>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>com.github.jasmineRepo</groupId>
+				<artifactId>JAS-mine-core</artifactId>
+				<version>3.0.3</version>
+			</dependency>
+			<dependency>
+				<groupId>com.github.jasmineRepo</groupId>
+				<artifactId>JAS-mine-gui</artifactId>
+				<version>3.0.3</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 </project>
