--- a/demo07/pom.xml
+++ b/demo07/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>it.zero11</groupId>
-  <artifactId>persons</artifactId>
-  <version>2.1.2</version>
+  <groupId>com.github.jasmineRepo</groupId>
+  <artifactId>demo07</artifactId>
+  <version>1.0.0</version>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <resources>
@@ -46,12 +46,12 @@
 			<dependency>
 				<groupId>com.github.jasmineRepo</groupId>
 				<artifactId>JAS-mine-core</artifactId>
-				<version>3.0.3</version>
+				<version>3.0.4</version>
 			</dependency>
 			<dependency>
 				<groupId>com.github.jasmineRepo</groupId>
 				<artifactId>JAS-mine-gui</artifactId>
-				<version>3.0.3</version>
+				<version>3.0.4</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
